--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>js algoritmo</title>
 </head>
 <body>
+
+    <h2>ejercicio 10</h2>
+
+    <input type="number" class="input-1" placeholder="numero 1">
+    <input type="number" class="input-2" placeholder="numero 2">
+    <button type="button" class="btn-1">calcular</button>
+
+    <h2>ejercicio 11</h2>
+
+    <input type="number" class="input-3" placeholder="numero 1">
+    <input type="number" class="input-4" placeholder="numero 2">
+    <button type="button" class="btn-2">calcular</button>
+
+    <h2>ejercicio 14</h2>
+
+    <input type="number" class="input-5" placeholder="precio">
+    <input type="number" class="input-6" placeholder="iva">
+    <button type="button" class="btn-3">calcular</button>
+
+    <p class="salida"></p>
+
     <script src="app.js"></script>
 </body>
 </html>
