--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <input type="number" class="input-6" placeholder="iva">
     <button type="button" class="btn-3">calcular</button>
 
+    <h2>ejercio 15</h2>
+
+    <input type="number" class="input-7" placeholder="ingresa el lado">
+    <button type="button" class="btn-4">calcular</button>
+
     <p class="salida"></p>
 
     <script src="app.js"></script>
