--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <input type="number" class="input-7" placeholder="ingresa el lado">
     <button type="button" class="btn-4">calcular</button>
 
+    <h2>ejercicio 18</h2>
+
+    <input type="number" class="input-8" placeholder="kilometros recorrido">
+    <input type="number" class="input-9" placeholder="litros consumidos">
+    <button type="button" class="btn-5">calcular</button>
+
     <p class="salida"></p>
 
     <script src="app.js"></script>
