--- a/condicional.html
+++ b/condicional.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
     <title>condicionales</title>
 </head>
 <body>
 
-    <select name="" id="">
+    <h2>ejercicio 1</h2>
 
+    <input type="number" placeholder="ingresa la cantidad" id="cantidad">
+    <button type="button" class="btn-1">calcular</button>
+
+    <h2>ejercicio 3</h2>
+
+    <input type="number" placeholder="ingresa tu edad" id="edad">
+
+    <select name="" id="lista">
         <option value="" selected hidden>elige tu genero</option>
         <option value="femenino">femenino</option>
         <option value="masculino">masculino</option>
-
-
     </select>
 
+    <p id="salida"></p>
     
     <script src="condicional.js"></script>
 </body>
